--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.css"/>
-    <script type="module" crossorigin src="/assets/index.2fe3ad33.js"></script>
-    <link rel="stylesheet" href="/assets/index.8f4adef6.css">
+    <link rel="stylesheet" href="/middlemarch-vite-test//css/main.css"/>
+    <script type="module" crossorigin src="/middlemarch-vite-test//assets/index.2fe3ad33.js"></script>
+    <link rel="stylesheet" href="/middlemarch-vite-test//assets/index.8f4adef6.css">
   </head>
 
   <body>
